--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/core": "^0.3.7",
+    "@langchain/openai": "^0.3.5",
     "argon2": "^0.40.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.19.2",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.2",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "redis": "^4.6.15",
